starting to switch to Weblogic 12 install